--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "FooPlugins <info@fooplugins.com> (https://fooplugins.com)",
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@wordpress/components": "^19.1.1",
     "@wordpress/dependency-extraction-webpack-plugin": "^3.2.1",
     "@wordpress/scripts": "^18.0.1",
     "classnames": "^2.3.1",
