--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@svgr/webpack": "^5.5.0",
     "@wordpress/components": "^19.1.1",
     "@wordpress/dependency-extraction-webpack-plugin": "^3.2.1",
+    "@wordpress/notices": "^3.2.7",
     "@wordpress/scripts": "^18.0.1",
     "classnames": "^2.3.1",
     "del": "^4.1.1",
